<resources>

    <!-- ID de cliente para autenticación con Google -->
    <string name="default_web_client_id" formatted="false">356292795240-50s5lk8ur0b9qit87tnck65n0scnfoka.apps.googleusercontent.com</string>


    <string name="mi_google_maps_api_key">AIzaSyD5Ktq4LxN5wEod7M0EGIoDjB4ox-CrzMI</string>


    <!-- Nombre de la aplicación -->
    <string name="app_name">Network</string>

    <!-- Elementos del menú principal -->
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Publicar">Publicar</string>
    <string name="Item_Guardado">Guardado</string>
    <string name="Item_Chat">Chat</string>
    <string name="Item_Perfil">Perfil</string>

    <!-- Pantalla de inicio de sesión -->
    <string name="Txt_login">Login</string>
    <string name="ET_email">Ingresar Correo</string>
    <string name="Et_password">Ingresar Contraseña</string>
    <string name="btn_ingresar">Iniciar Sesión</string>
    <string name="txt_nocuenta">¿No tienes cuenta?</string>
    <string name="txt_registrar">REGÍSTRATE</string>

    <!-- Registro de usuario -->
    <string name="Txt_registro">Registro de Usuario</string>
    <string name="Et_r_password">Repita Contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <!-- Cerrar sesión -->
    <string name="Btn_CerrarSesion">Cerrar Sesión</string>

    <!-- Datos de usuario - Perfil -->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Información:</string>
    <string name="Txt_nombres">Nombres:</string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email:</string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nacimiento:</string>
    <string name="Tv_nacimiento">dd/mm/aaaa</string>
    <string name="Txt_miembro">Miembro desde:</string>
    <string name="Tv_miembro">dd/mm/aaaa</string>
    <string name="Txt_telefono">Teléfono:</string>
    <string name="Tv_telefono">999999999</string>
    <string name="Txt_estado_cuenta">Estado de cuenta:</string>
    <string name="Txt_estado_quenta">No verificado</string>

    <string name="Txt_opciones"> Opciones</string>
    <string name="Btn_Editar_Perfil">Editar Perfil</string>
    <string name="Btn_Cerrar_Sesion">Cerrar Sesión</string>


    <!-- Editar Perfil -->
    <string name="Txt_editar_p">Editar Perfil</string>
    <string name="Et_nombres">Nombres Completos</string>
    <string name="Et_f_nac">Fecha de Nacimiento</string>
    <string name="Cod_tel">+00</string>
    <string name="Et_Tel">222222222</string>
    <string name="Btn_actualizar">Actualizar</string>

    <!--Crear Anuncio-->
    <string name="Et_marca">Nombre de la Marca</string>
    <string name="Categoria">Categoria</string>
    <string name="Condiccion">Condicion</string>
    <string name="Locacion">Ubicacion</string>
    <string name="ET_Precio">Precio</string>
    <string name="ET_Titulo">Titulo</string>
    <string name="ET_Descripcion">Descripcion</string>
    <string name="BTN_crear_anuncio">Publicar</string>


    <!--Fragmento Inicio-->
    <string name="Tv_localizacion">Lija una Ubicacion</string>
    <string name="Tv_buscar">Buscar</string>
    <string name="Txt_categoria">Categorias</string>
    <string name="Tv_categoria">Categoria</string>


    <!--Mapas-->
    <string name="Txt_selec_ubicacion">Seleccione su  Ubicacion</string>
    <string name="Btn_listo">Listo</string>


    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_cambiar_pass">Cambiar password</string>
    <string name="Btn_verificar_cuenta">Verificar cuenta</string>
    <string name="Btn_eliminar_anuncios">Eliminar mis anuncios</string>
    <string name="Btn_eliminar_cuenta">Eliminar cuenta</string>
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>

    <!--Editar perfil-->


    <!--Crear anuncio-->


    <!--Item anuncio-->
    <string name="Tv_titulo">Titulo del Anuncio</string>
    <string name="Tv_descripcion">Descripción del producto, se podrá visualizar un máximo de 3 líneas</string>
    <string name="Tv_direccion">Dirección</string>


    <string name="Txt_detalle_info">Detalle del anuncio</string>
    <string name="Tv_cat">Categoría del anuncio</string>
    <string name="Txt_titulo">Titulo</string>
    <string name="Txt_descripcion">Descripción</string>
    <string name="Tv_descr">Descripción del anuncio</string>
    <string name="Txt_direccion">Dirección</string>
    <string name="Txt_vistas">Número de visitas del anuncio: </string>
    <string name="Tv_vistas">0</string>
    <string name="Txt_descr_vendedor">Descripción del vendedor</string>
    <string name="Txt_estado">Estado</string>
    <string name="Tv_estado">Disponible</string>

    <!--Opciones de detalle anuncio-->
    <string name="Btn_mapa">Mapa</string>
    <string name="Btn_llamar">Llam.</string>
    <string name="Btn_sms">SMS</string>
    <string name="Btn_chat">Chat</string>

    <string name="imagenContadorTv">1/4</string>

    <!--CD eliminar imagen-->
    <string name="Txt_eliminar">¿Estás seguro(a) de eliminar la imagen?</string>
    <string name="Btn_si">Si</string>
    <string name="Btn_no">Cancelar</string>

    <!--CD marcar vendido-->
    <string name="Txt_marcar_vendido">¿Marcar como vendido el producto?</string>

    <string name="Txt_perfil_vendedor">Perfil del vendedor</string>
    <string name="Txt_anuncios">Anuncios publicados:</string>
    <string name="Tv_num_anuncios">0</string>

    <string name="Txt_comentarios">Comentarios</string>
    <string name="Txt_agregar">Agregar un comentario</string>

    <string name="Et_agregar_comentario">Escriba un comentario</string>
    <string name="Btn_comentar">Comentar</string>

    <string name="Tv_nombres_comentario">Nombres</string>
    <string name="Tv_fecha_comentario">dd/MM/yyyy</string>
    <string name="Tv_comentario">Comentario del usuario</string>

    <string name="Txt_olvide_pass">He olvidado mi contraseña</string>
    <string name="Tv_recuperar">Recuperar</string>
    <string name="Txt_olvide_password">Olvidé mi contraseña</string>

    <string name="Txt_instrucciones">¿Olvidó su contraseña? Ingrese su correo electrónico registrado.
    Le enviaremos las instrucciones de recuperación</string>
    <string name="Btn_enviar_instrucciones">Enviar</string>

    <string name="Txt_cambiar_pass">Cambiar contraseña</string>
    <string name="Txt_instr_cambio_pass">Su nueva contraseña debe ser diferente a la actual</string>
    <string name="Et_password_actual">Contraseña actual</string>
    <string name="Et_password_nueva">Contraseña nueva</string>
    <string name="Et_password_nueva_r">Repita la nueva contraseña</string>
    <string name="Btn_actualizar_pass">Actualizar</string>

    <!--Chat-->
    <string name="Txt_nombre_vendedor_chat">Nombre del vendedor</string>
    <string name="Txt_estado_chat">Online</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>
    <string name="Btn_cerrar_visualizador">Cerrar</string>

    <string name="Txt_eliminar_cuenta">Eliminar cuenta</string>
    <string name="Txt_mensaje_eliminar">¿Estás seguro(a) que deseas eliminar tu cuenta?. Esta acción no se puede deshacer</string>
    <string name="Btn_eliminar_mi_cuenta">Eliminar mi cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
