<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pInicio"
        android:title="@string/Item_Inicio"
        android:icon="@drawable/inicio"
        />
    <item
        android:id="@+id/pChat"
        android:title="@string/Item_Chat"
        android:icon="@drawable/chat"
        />
    <item
        android:id="@+id/pAgregar"
        android:title="@string/Item_Publicar"
        android:enabled="false"
        />
    <item
        android:id="@+id/pGuardado"
        android:title="@string/Item_Guardado"
        android:icon="@drawable/guardado"
        />
    <item
        android:id="@+id/pPerfil"
        android:title="@string/Item_Perfil"
        android:icon="@drawable/perfil"
        />
</menu>