<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">



        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/iconlog" />


        <!---Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/Et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ET_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <!---Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <!---Boton Ingresar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnIngresar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_login"
            android:textAllCaps="true" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nocuenta" />

            <TextView
                android:id="@+id/TxtRegistrarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/txt_registrar"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O Inicia Sesión con"
            android:textSize="12dp"
            />

        <ImageView
            android:id="@+id/IniciarGoogle"
            android:layout_marginTop="10dp"
        android:src="@drawable/icgoogle"
        android:layout_width="70dp"
        android:layout_height="50dp"
        />
        <TextView
            android:id="@+id/TvRecuperar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Olvidastes tu contraseña?"
            android:textSize="12dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>