<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="25dp"
    tools:context=".editar_perfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        
        <TextView
            android:id="@+id/Txt_editar_p"
            android:text="@string/Txt_editar_p"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <RelativeLayout
            android:id="@+id/PerfilRL"
            android:layout_marginTop="5dp"
            android:layout_below="@id/Txt_editar_p"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/imgperfilRl"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_perfil" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_seleccionar_img"
                app:fabSize="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PerfilRL"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_nombres"
                android:inputType="textPersonName"
                android:hint="@string/Et_nombres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </com.google.android.material.textfield.TextInputLayout>

        <!--Fecha de Nacimiento-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_Nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TILNombres"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp">

            <EditText
                android:id="@+id/Et_f_nac"
                android:hint="@string/Et_f_nac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </com.google.android.material.textfield.TextInputLayout>
        
        <RelativeLayout
            android:id="@+id/RL_Cod_Tel"
            android:layout_below="@id/TIL_Nac"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCodigo"
                android:gravity="center"
                app:ccp_rememberLastSelection="true"
                app:ccp_autoDetectCountry="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Numero Telefono-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/selectorCodigo"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">

                <EditText
                    android:id="@+id/Et_tel"
                    android:hint="@string/Et_Tel"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnActualizar"
            android:text="@string/Btn_actualizar"
            android:textAllCaps="true"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:layout_below="@id/RL_Cod_Tel"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"/>


        
    </RelativeLayout>

</RelativeLayout>